--- a/package.json
+++ b/package.json
@@ -35,8 +35,11 @@
     "@feathersjs/socketio": "^3.0.2",
     "compression": "^1.7.1",
     "cors": "^2.8.4",
+    "feathers-knex": "^3.0.1",
     "helmet": "^3.9.0",
+    "knex": "^0.14.2",
     "serve-favicon": "^2.4.5",
+    "sqlite3": "^3.1.13",
     "winston": "^2.4.0"
   },
   "devDependencies": {
