--- a/package.json
+++ b/package.json
@@ -35,9 +35,10 @@
     "@feathersjs/socketio": "^3.0.2",
     "compression": "^1.7.1",
     "cors": "^2.8.4",
+    "ejs": "^2.5.7",
     "feathers-sequelize": "^3.0.0",
     "helmet": "^3.9.0",
-    "serve-favicon": "^2.4.5",
+    "sequelize": "^4.31.0",
     "sqlite3": "^3.1.13",
     "winston": "^2.4.0"
   },
