--- a/package.json
+++ b/package.json
@@ -32,10 +32,10 @@
     "@feathersjs/express": "^1.1.2",
     "@feathersjs/feathers": "^3.0.5",
     "@feathersjs/socketio": "^3.0.2",
+    "axios": "^0.17.1",
     "compression": "^1.7.1",
     "cors": "^2.8.4",
     "ejs": "^2.5.7",
-    "feathers-sequelize": "^3.0.0",
     "helmet": "^3.9.0",
     "multer": "^1.3.0",
     "sequelize": "^4.31.0",
