--- a/package.json
+++ b/package.json
@@ -15,38 +15,30 @@
   "bugs": {},
   "directories": {
     "lib": "src",
-    "test": "test/"
   },
   "engines": {
     "node": "^8.0.0",
     "yarn": ">= 0.18.0"
   },
   "scripts": {
-    "test": "yarn run eslint && yarn run mocha",
-    "eslint": "eslint src/. test/. --config .eslintrc.json",
-    "start": "node src/index.js --settings settings/settings.default.json",
-    "mocha": "mocha test/ --recursive --exit"
+    "start": "node src/index.js --settings settings/settings.default.json"
   },
   "dependencies": {
     "@feathersjs/errors": "^3.2.1",
     "@feathersjs/express": "^1.1.2",
     "@feathersjs/feathers": "^3.0.5",
     "@feathersjs/socketio": "^3.0.2",
-    "axios": "^0.17.1",
     "compression": "^1.7.1",
     "cors": "^2.8.4",
     "ejs": "^2.5.7",
     "helmet": "^3.9.0",
+    "lodash.omit": "^4.5.0",
     "multer": "^1.3.0",
+    "querystring": "^0.2.0",
     "sequelize": "^4.31.0",
     "sqlite3": "^3.1.13",
     "standard-settings": "^1.1.10",
-    "winston": "^2.4.0"
-  },
-  "devDependencies": {
-    "eslint": "^4.15.0",
-    "mocha": "^4.1.0",
-    "request": "^2.83.0",
-    "request-promise": "^4.2.2"
+    "winston": "^2.4.0",
+    "request": "^2.83.0"
   }
 }
