--- a/settings/settings.default.json
+++ b/settings/settings.default.json
@@ -4,9 +4,10 @@
     "port": 3000
   },
   "flag": {
-    "devMode": true
+    "devMode": true,
+    "dropTables": false
   },
   "folder": {
-    "uploads": "./../uploads"
+    "uploads": "./../../../uploads"
   }
 }
