--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   "contributors": [],
   "bugs": {},
   "directories": {
-    "lib": "src",
+    "lib": "src"
   },
   "engines": {
     "node": "^8.0.0",
@@ -28,6 +28,7 @@
     "@feathersjs/express": "^1.1.2",
     "@feathersjs/feathers": "^3.0.5",
     "@feathersjs/socketio": "^3.0.2",
+    "async": "^2.6.0",
     "compression": "^1.7.1",
     "cors": "^2.8.4",
     "ejs": "^2.5.7",
@@ -35,10 +36,10 @@
     "lodash.omit": "^4.5.0",
     "multer": "^1.3.0",
     "querystring": "^0.2.0",
+    "request": "^2.83.0",
     "sequelize": "^4.31.0",
     "sqlite3": "^3.1.13",
     "standard-settings": "^1.1.10",
-    "winston": "^2.4.0",
-    "request": "^2.83.0"
+    "winston": "^2.4.0"
   }
 }
