--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "helmet": "^3.9.0",
     "lodash.omit": "^4.5.0",
     "multer": "^1.3.0",
+    "nanotimer": "^0.3.15",
     "querystring": "^0.2.0",
     "request": "^2.83.0",
     "sequelize": "^4.31.0",
