Added timer util with flags in settings

--- a/settings/settings.default.json
+++ b/settings/settings.default.json
@@ -5,9 +5,11 @@
   },
   "flag": {
     "devMode": true,
-    "dropTables": false
+    "dropTables": false,
+    "autostart": true
   },
   "folder": {
     "uploads": "./../../../uploads"
-  }
+  },
+  "timeout": "30s"
 }
