--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@feathersjs/express": "^1.1.2",
     "@feathersjs/feathers": "^3.0.5",
     "@feathersjs/socketio": "^3.0.2",
+    "axios": "^0.17.1",
     "compression": "^1.7.1",
     "cors": "^2.8.4",
     "feathers-sequelize": "^3.0.0",
@@ -38,9 +39,5 @@
     "serve-favicon": "^2.4.5",
     "sqlite3": "^3.1.13",
     "winston": "^2.4.0"
-  },
-  "devDependencies": {
-    "request": "^2.83.0",
-    "request-promise": "^4.2.2"
   }
 }
