--- a/package.json
+++ b/package.json
@@ -30,11 +30,11 @@
     "@feathersjs/express": "^1.1.2",
     "@feathersjs/feathers": "^3.0.5",
     "@feathersjs/socketio": "^3.0.2",
-    "axios": "^0.17.1",
     "compression": "^1.7.1",
     "cors": "^2.8.4",
     "feathers-sequelize": "^3.0.0",
     "helmet": "^3.9.0",
+    "node-fetch": "^1.7.3",
     "sequelize": "^4.31.2",
     "serve-favicon": "^2.4.5",
     "sqlite3": "^3.1.13",
