Added lodash.omit dependence

--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "cors": "^2.8.4",
     "feathers-sequelize": "^3.0.0",
     "helmet": "^3.9.0",
+    "lodash.omit": "^4.5.0",
     "node-fetch": "^1.7.3",
     "sequelize": "^4.31.2",
     "serve-favicon": "^2.4.5",
