--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "compression": "^1.7.1",
     "cors": "^2.8.4",
     "feathers-sequelize": "^3.0.0",
+    "form-data": "^2.3.1",
     "helmet": "^3.9.0",
     "lodash.omit": "^4.5.0",
     "node-fetch": "^1.7.3",
