--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "form-data": "^2.3.1",
     "helmet": "^3.9.0",
     "lodash.omit": "^4.5.0",
+    "multer": "^1.3.0",
     "node-fetch": "^1.7.3",
     "sequelize": "^4.31.2",
     "serve-favicon": "^2.4.5",
