--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "helmet": "^3.9.0",
     "lodash.omit": "^4.5.0",
     "multer": "^1.3.0",
+    "nanotimer": "^0.3.15",
     "node-fetch": "^1.7.3",
     "sequelize": "^4.31.2",
     "serve-favicon": "^2.4.5",
