--- a/.gitignore
+++ b/.gitignore
@@ -51,7 +51,4 @@ npm-debug.log
 # Project Specific #
 ######################
 # temp files in /app/queue
-app/queue/
-app/config/config.json
-config.json
-settings.json
+uploads/
