--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@feathersjs/express": "^1.1.2",
     "@feathersjs/feathers": "^3.0.5",
     "@feathersjs/socketio": "^3.0.2",
+    "async": "^2.6.0",
     "compression": "^1.7.1",
     "cors": "^2.8.4",
     "feathers-sequelize": "^3.0.0",
