--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "feathers-sequelize": "^3.0.0",
     "form-data": "^2.3.1",
     "helmet": "^3.9.0",
+    "lodash.isfunction": "^3.0.9",
     "lodash.omit": "^4.5.0",
     "multer": "^1.3.0",
     "nanotimer": "^0.3.15",
