--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "version": "0.0.1",
   "license": "MIT",
   "homepage": "",
-  "main": "src",
+  "main": "src/index.js",
   "keywords": [
     "feathers",
     "cache",
